--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
+body {
+  background-color: #36393e;
+  
+}
+
+
 .App {
   text-align: center;
+  background-color: #36393e;
 }
 
 .App-logo {
@@ -14,14 +21,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #424549;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(30, 30, 30);
 }
 
 .App-link {
