--- a/client/src/css/Game.css
+++ b/client/src/css/Game.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #424549;
+    margin: 0px;
+  }
+
 .CloseButton {
     line-height: 12px;
     width: 18px;
@@ -10,16 +15,16 @@
 }
 
 .WindowHeader {
-    color: gray;
+    color: 	#424549;
 }
 
 .TaskDiv {
-    outline: 1px solid gray;
+    outline: 3px solid rgb(255, 0, 0);
     display: 'inline-block';
 }
 
 .crewmate-alive {
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .crewmate-dead {
@@ -38,13 +43,115 @@
     font-weight: bold;
 }
 
+#bg {
+    height: 100%;
+    width: 100%;
+    background: #424549;
+    position: absolute;
+}
+#bgsab {
+    height: 100%;
+    width: 100%;
+    background: #424549;
+    position: absolute;
+    animation-name: color;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+@keyframes color {
+    0% {
+      background-color: #424549;
+    }
+    50% {
+      background-color: #b25252;
+    }
+    100% {
+      background-color: #424549;
+    }
+}
+
+#header {
+    text-align: center;
+    font-size: clamp(5rem, 5vw, 5rem);
+}
+
+/* Waiting Screen */
+
+#buttonstart {
+    background: #14ec00;
+    color: white;
+    border-style: outset;
+    border-color: #1e2124;
+    font-size: clamp(1rem, 2vw, 1rem);
+    font: bold15px arial,sans-serif;
+    text-shadow: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 20px;
+    }
+
+/* Login Screen */
+
+#menu {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.text {
+    color: white;
+    margin: auto;
+}
+#text {
+    width: 300px;
+    color: white;
+    margin: auto;
+}
+
+#input:focus, input:focus {
+    border-radius: 5px;
+    color: white;
+    background:#282b30;
+    font-size: clamp(1rem, 2vw, 2rem);
+    margin: auto;
+    border-style: ridge;
+    border-color: #1e2124;
+}
+#input, select, textarea{
+    border-radius: 5px;
+    color: white;
+    display: block;
+    background:#282b30;
+    font-size: clamp(1rem, 2vw, 2rem);
+    border-style: ridge;
+    border-color: #1e2124;
+}
+#menuitems {
+    font-size: clamp(1rem, 2vw, 2rem);
+    margin: auto;
+}
+
+#button {
+    background: #00a5ec;
+    color: white;
+    border-style: outset;
+    border-color: #1e2124;
+    font-size: clamp(1rem, 2vw, 2rem);
+    font: bold15px arial,sans-serif;
+    text-shadow: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    }
 
 /* Placeholder */
+
 
 .dot {
     height: 25px;
     width: 25px;
-    background-color: #bbb;
+    background-color: #424549;
     border-radius: 50%;
     display: inline-block;
   }
